# tauri

./: READMD.md  README.md  pnpm-lock.yaml
.changes/: android-run-build-bundles.md  change-pr-15177.md  check-maximizable-drag-region.md  feat-uninstaller-icon-image.md  file-association.md  fix-ndk-home-not-honor.md  fix-nondeterministic-context-codegen.md  listener-event-once-multiple-times.md  load-tauri-protocol-async.md  mobile-file-associations.md  mobile-resume-suspend-deadlock.md  mobile-run-command-deadlock.md  monitor-logical-bounds.md  multi-window-mobile.md  new-window-main-thread.md  resource-path-cur-dir.md  resources-after-empty-diretory.md  safepathbuf_into_pathbuf.md  tauri-dbus.md  tray-icon-0.22.md  v1-migrate-aliased-plugin-imports.md  wix-minimum-webview2-version.md  work-area.md
.github/workflows/: deploy-schema-worker.yml  publish-cli-js.yml  publish-cli-rs.yml  test-core.yml
crates/tauri/: Cargo.toml  build.rs
crates/tauri-build/src/: lib.rs  mobile.rs
crates/tauri-cli/: config.schema.json
crates/tauri-runtime/: Cargo.toml
crates/tauri-runtime-wry/: Cargo.toml
crates/tauri-schema-worker/: package.json
crates/tauri-utils/: Cargo.toml
driftline/: index.html  package-lock.json
driftline-tauri/: .gitignore  package-lock.json  package.json
driftline-tauri/src-tauri/: Cargo.toml  tauri.conf.json
driftline-tauri/src-tauri/src/: lib.rs  main.rs
driftline/src/: style.css
examples/api/: package.json
examples/iphone-react-python/: README.md  build.mjs  package-lock.json  package.json
moon/: index.html
moon/src/: style.css
(+47 files in other folders)
