[package]
name = "driftline"
version = "0.1.0"
description = "Original ocean raft survival game built with Tauri and Babylon.js"
authors = ["dexter"]
edition = "2021"

[workspace]

[lib]
name = "driftline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
